CSS/main.css
/* Main body styling */

body, html {
  height: 100%;
  width: 100%;
  /* opacity: 1; */
  font-family: 'Alegreya SC', serif;
}

body {
  box-sizing: border-box;
  margin: 0 auto;
  text-align: center;
  background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url('../Images/pride_rock_no_animals.jpeg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  display: flex;
  /* opacity: 1; */
  flex-direction: column;
  justify-content: center;
}

.wrap {
  background: none;
}

header, .content, #instructions, main, .controls, footer {
  width: 850px;
  border: 2px solid orange;
  margin: 0 auto;
  background: rgba(0,0,0,0.75);
  border-radius: 5px;
}

header {
  height: 60px;
  margin-bottom: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffefd5;
  font-size: 23px;
}

.content {
  display: flex;
  justify-content: space-around;
  color: beige;
  margin-bottom: 5px;
}

div {
  padding: 0;
}

main {
  height: 400px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 5px;
}

h2 {
  font-size:14px;
  color: beige;
  margin: 5px 0px 0px 0px;
}

#instructions {
  margin-bottom: 5px;
}

#instructions p {
  font-size: 12px;
  color: #ffefd5;
  padding: 0px 130px;
  margin: 0px 0px 3px 0px;
}

.controls {
  display: flex;
  height: 40px;
  color: #ffefd5;
  justify-content: space-evenly;
  margin-bottom: 5px;
}

.controls div {
  display: flex;
  justify-content: center;
  align-items: center;
  margin:0;
}

.controls img {
  height: 70%;
  margin-left: 5px;
}

.controls p {
  margin-right: 5px;
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20px;
  color: #ffefd5;
  font-size: 12px;
}

button {
  height: 20px;
  font-family: 'Alegreya SC', serif;
}

/* Specific grid styling to use in JS */

.grid {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
  width: 850px;
  height: 400px;
}

.grid div {
  border-top: 0px solid white;
  border-bottom: 0px solid white;
  width: calc(100% / 12);
  height: calc(400px/ 8);
}

.grid div.water {
  background-color: rgba(120,196,215,0.7)
}

/* Images */
.grid div.simba {
  background-image: url("../Images/simba-2.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}
/* img {
  background-size: cover;
  position: absolute;
} */

.grid div.timon {
  background-image: url('../Images/timon-3.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.pumbaa {
  background-image: url('../Images/pumba.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.scar {
  background-image: url('../Images/scar.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.wildebeest {
  background-image: url('../Images/wildebeest.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.hyena {
  background-image: url('../Images/hyena.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.zazu {
  background-image: url('../Images/zazu.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.elephant {
  background-image: url('../Images/elephanty.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.grid div.rock {
  background-image: url('../Images/rock.png');
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}


/* * Modals * */
/* Page load modal to start game  */
.modal-load {
  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../Images/pride_rock_no_animals.jpeg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 90%;
  height: 90%;
  display: none;
  position: fixed;
  top: 5%;
  left: 5%;
  bottom: 0;
  border-radius: 85px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #ffefd5;
}

.modal-body {
  display: flex;
  align-items: center;
  margin: 30px;
}

.modal-content {
  margin: 0 10px;
  height: 100%;
  justify-content: space-between;
  
}

.modal-title {
  text-transform: uppercase;
  font-size: 55px;
}

.modal-detail {
 font-size: 25px;
 margin: 0px 30px;
}

h4 {
  font-size: 20px;
}

.modal-content p {
  margin: 5px 40px 20px 40px;
  font-size: 20px;
}


.modal-image img {
  height: 450px;
}

#play {
  width: 150px;
  align-self: center;
  height: 50px;
  margin-top: 50px;
  opacity: 0.75;
}

/* Modal for when simba loses a life */
.simba-pop {
  background: rgba(0,0,0,0.8);
  width: 100%;
  height: 100%;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  flex-direction: row;
}

.life-lost {
  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../Images/graveyard.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 400px;
  height: 200px;
  position: fixed;
  top: 33%;
  left: 36%;
  border-radius: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffefd5;
}

.life-image img{
  height: 120px;
  margin-left: 10px;
}

.life-left{
  margin-right: 10px;
}

.life-left button {
  width: 140px;
  height: 30px;
  background-color: #ffefd5;
  border: 1px black;
  border-radius: 5px;
}

.life-lost h2 {
  font-size: 20px;
}

.livesModal {
  font-weight: bold;
}

/* Additional modal detail for Timon */
.timon-pop {
  background: rgba(0,0,0,0.8);
  width: 100%;
  height: 100%;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  flex-direction: row;
}

/* Additional modal detail for pumba */
.pumbaa-pop {
  background: rgba(0,0,0,0.8);
  width: 100%;
  height: 100%;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  flex-direction: row;
}

/* Pop up for game ending */
.game-over {
  background: rgba(0,0,0,0.8);
  width: 100%;
  height: 100%;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  flex-direction: row;
}

.end-content {
  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../Images/hyenas-game-over.jpeg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 400px;
  height: 200px;
  position: fixed;
  top: 33%;
  left: 36%;
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #ffefd5;
}

.end-content h1, .end-content p, .end-content button {
  margin: 10px 30px;
}

.end-content h1 {
  text-transform: capitalize;
  font-size: 40px;
}

#game-over-btn {
  width: 140px;
  height: 30px;
  background-color: #ffefd5;
  border: 1px black;
  border-radius: 5px;
}

/* Pop-up for winning the game */
.winning-modal {
  background: rgba(0,0,0,0.8);
  width: 100%;
  height: 100%;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  flex-direction: row;
}

.win-content {
  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../Images/lion-king-win.jpeg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  width: 600px;
  height: 400px;
  position: fixed;
  top: 20%;
  left: 30%;
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  color: #ffefd5;
}

.win-content h1 {
  font-size: 40px;
  margin: 0;
}

.win-content p {
  font-size: 25px;
  margin: 0px 30px;
}

.win-content button {
  width: 140px;
  height: 30px;
  background-color: #ffefd5;
  border: 1px black;
  border-radius: 5px;
}

